bindings/php/revault_ffi.h

typedef unsigned char bool;
typedef unsigned char uint8_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
typedef unsigned long uint64_t;
typedef unsigned long size_t;
typedef struct { uint8_t *ptr; size_t len; } RevaultBuffer;
uint32_t api_abi_version(void);
const char *buffer_last_error(void);
RevaultBuffer buffer_last_error_details(void);
void buffer_free(RevaultBuffer value);
bool secret_len(const void *handle, size_t *out_len);
bool secret_copy(const void *handle, uint8_t *destination, size_t destination_len);
void secret_free(void *handle);
uint16_t lockbox_format_version(void);
uint16_t lockbox_probe_format_version(const uint8_t *bytes, size_t len);
void *lockbox_create(const uint8_t *key, size_t key_len);
void *lockbox_create_with_options(const uint8_t *key, size_t key_len, const char *cache_mode, size_t cache_len, uint64_t cache_bytes, const char *workload, size_t workload_len, const char *worker, size_t worker_len, size_t jobs);
void *lockbox_create_password(const uint8_t *password, size_t len);
void *lockbox_create_contact(const void *contact);
void *lockbox_create_with_signing_key(const uint8_t *content_key, size_t key_len, const void *signing_key);
// END generated file operation declaration
/** Opens existing in-memory archive bytes. */
void *lockbox_open(const uint8_t *archive, size_t archive_len, const uint8_t *key, size_t key_len);
void *lockbox_open_with_options(const uint8_t *archive, size_t archive_len, const uint8_t *key, size_t key_len, const char *cache_mode, size_t cache_len, uint64_t cache_bytes, const char *workload, size_t workload_len, const char *worker, size_t worker_len, size_t jobs);
void *lockbox_open_password(const uint8_t *archive, size_t archive_len, const uint8_t *password, size_t password_len);
void *lockbox_open_contact(const uint8_t *archive, size_t archive_len, const void *contact);
bool lockbox_add_file(void *handle, const char *path, size_t path_len, const uint8_t *data, size_t data_len, bool replace);
bool lockbox_add_file_with_permissions(void *handle, const char *path, size_t path_len, const uint8_t *data, size_t data_len, uint32_t permissions, bool replace);
RevaultBuffer lockbox_get_file(const void *handle, const char *path, size_t path_len);
bool lockbox_extract_file(const void *handle, const char *source, size_t source_len, const char *destination, size_t destination_len, bool replace);
bool lockbox_extract_directory(const void *handle, const char *destination, size_t destination_len, uint64_t max_file_bytes, uint64_t max_total_bytes, size_t max_files, bool restore_symlinks, bool restore_permissions, bool overwrite);
RevaultBuffer lockbox_stream_content(const void *handle, bool physical);
RevaultBuffer lockbox_cache_stats(const void *handle);
RevaultBuffer lockbox_import_stats(const void *handle);
bool lockbox_reset_import_stats(const void *handle);
RevaultBuffer lockbox_inspect_file(const char *path, size_t path_len);
RevaultBuffer lockbox_page_inspection(const void *handle);
RevaultBuffer lockbox_recovery_report(const void *handle);
RevaultBuffer lockbox_recovery_report_render(const void *handle, bool verbose, size_t max_entries);
RevaultBuffer lockbox_recovery_scan_path(const char *path, size_t path_len, const uint8_t *key, size_t key_len);
uint64_t lockbox_storage_len(const void *handle);
bool lockbox_set_workload_profile(void *handle, const char *profile, size_t profile_len);
bool lockbox_set_worker_policy(void *handle, const char *mode, size_t mode_len, size_t jobs);
RevaultBuffer lockbox_runtime_options(const void *handle);
bool lockbox_commit(void *handle);
bool lockbox_create_dir(void *handle, const char *path, size_t path_len, bool create_parents);
bool lockbox_delete(void *handle, const char *path, size_t path_len);
bool lockbox_remove_dir(void *handle, const char *path, size_t path_len, bool recursive);
bool lockbox_create_parent_dirs(void *handle, const char *path, size_t path_len);
bool lockbox_rename(void *handle, const char *from, size_t from_len, const char *to, size_t to_len);
RevaultBuffer lockbox_list(const void *handle, const char *path, size_t path_len, bool recursive);
RevaultBuffer lockbox_list_with_options(const void *handle, const char *path, size_t path_len, const char *glob, size_t glob_len, bool recursive, bool include_files, bool include_symlinks, bool include_directories, size_t limit);
RevaultBuffer lockbox_stat(const void *handle, const char *path, size_t path_len);
bool lockbox_set_variable(void *handle, const char *name, size_t name_len, const char *value, size_t value_len);
bool lockbox_set_secret_variable(void *handle, const char *name, size_t name_len, const uint8_t *value, size_t value_len);
RevaultBuffer lockbox_get_variable(const void *handle, const char *name, size_t name_len);
bool lockbox_get_secret_variable(const void *handle, const char *name, size_t name_len, void **output);
bool lockbox_delete_variable(void *handle, const char *name, size_t name_len);
bool lockbox_move_variables(void *handle, const uint8_t *moves_flatbuffer, size_t moves_len);
RevaultBuffer lockbox_list_variables(const void *handle);
RevaultBuffer lockbox_variable_sensitivity(const void *handle, const char *name, size_t name_len);
bool lockbox_add_symlink(void *handle, const char *path, size_t path_len, const char *target, size_t target_len, bool replace);
RevaultBuffer lockbox_get_symlink_target(const void *handle, const char *path, size_t path_len);
RevaultBuffer lockbox_id(const void *handle);
bool lockbox_exists(const void *handle, const char *path, size_t path_len);
bool lockbox_is_dir(const void *handle, const char *path, size_t path_len);
uint32_t lockbox_permissions(const void *handle, const char *path, size_t path_len);
bool lockbox_set_permissions(void *handle, const char *path, size_t path_len, uint32_t permissions);
RevaultBuffer lockbox_read_range(const void *handle, const char *path, size_t path_len, uint64_t offset, uint64_t len);
RevaultBuffer lockbox_recovery_scan(const uint8_t *bytes, size_t len, const uint8_t *key, size_t key_len);
void *lockbox_recovery_salvage(const uint8_t *bytes, size_t len, const uint8_t *key, size_t key_len, const void *signing_key);
uint64_t lockbox_add_password(void *handle, const uint8_t *password, size_t len);
uint64_t lockbox_add_contact(void *handle, const void *contact, const char *name, size_t name_len);
bool lockbox_delete_key(void *handle, uint64_t id);
RevaultBuffer lockbox_list_key_slots(const void *handle);
bool lockbox_set_owner_signing_key(void *handle, const void *key);
RevaultBuffer lockbox_owner_inspection(const void *handle);
RevaultBuffer lockbox_define_form(void *handle, const char *alias, size_t alias_len, const char *name, size_t name_len, const char *description, size_t description_len, const uint8_t *fields_flatbuffer, size_t fields_len);
RevaultBuffer lockbox_list_form_definitions(const void *handle);
RevaultBuffer lockbox_resolve_form(const void *handle, const char *reference, size_t reference_len);
RevaultBuffer lockbox_list_form_revisions(const void *handle, const char *type_id, size_t type_id_len);
RevaultBuffer lockbox_create_form_record(void *handle, const char *path, size_t path_len, const char *type_reference, size_t type_len, const char *name, size_t name_len);
bool lockbox_set_form_field(void *handle, const char *path, size_t path_len, const char *field, size_t field_len, const char *value, size_t value_len);