bindings/python/revault_api/_revault_native.py


def configure_native(library, buffer_type):
    library.api_abi_version.argtypes = []
    library.api_abi_version.restype = ctypes.c_uint32
    library.buffer_last_error.argtypes = []
    library.buffer_last_error.restype = ctypes.c_char_p
    library.buffer_last_error_details.argtypes = []
    library.buffer_last_error_details.restype = buffer_type
    library.buffer_free.argtypes = [buffer_type]
    library.buffer_free.restype = None
    library.secret_len.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_size_t)]
    library.secret_len.restype = ctypes.c_bool
    library.secret_copy.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.secret_copy.restype = ctypes.c_bool
    library.secret_free.argtypes = [ctypes.c_void_p]
    library.secret_free.restype = None
    library.lockbox_format_version.argtypes = []
    library.lockbox_format_version.restype = ctypes.c_uint16
    library.lockbox_probe_format_version.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_probe_format_version.restype = ctypes.c_uint16
    library.lockbox_create.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_create.restype = ctypes.c_void_p
    library.lockbox_create_with_options.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t]
    library.lockbox_create_with_options.restype = ctypes.c_void_p
    library.lockbox_create_password.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_create_password.restype = ctypes.c_void_p
    library.lockbox_create_contact.argtypes = [ctypes.c_void_p]
    library.lockbox_create_contact.restype = ctypes.c_void_p
    library.lockbox_create_with_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.lockbox_create_with_signing_key.restype = ctypes.c_void_p
    library.lockbox_open.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_open.restype = ctypes.c_void_p
    library.lockbox_open_with_options.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t]
    library.lockbox_open_with_options.restype = ctypes.c_void_p
    library.lockbox_open_password.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_open_password.restype = ctypes.c_void_p
    library.lockbox_open_contact.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.lockbox_open_contact.restype = ctypes.c_void_p
    library.lockbox_add_file.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.lockbox_add_file.restype = ctypes.c_bool
    library.lockbox_add_file_with_permissions.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint32, ctypes.c_bool]
    library.lockbox_add_file_with_permissions.restype = ctypes.c_bool
    library.lockbox_get_file.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_get_file.restype = buffer_type
    library.lockbox_extract_file.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.lockbox_extract_file.restype = ctypes.c_bool
    library.lockbox_extract_directory.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64, ctypes.c_uint64, ctypes.c_size_t, ctypes.c_bool, ctypes.c_bool, ctypes.c_bool]
    library.lockbox_extract_directory.restype = ctypes.c_bool
    library.lockbox_stream_content.argtypes = [ctypes.c_void_p, ctypes.c_bool]
    library.lockbox_stream_content.restype = buffer_type
    library.lockbox_cache_stats.argtypes = [ctypes.c_void_p]
    library.lockbox_cache_stats.restype = buffer_type
    library.lockbox_import_stats.argtypes = [ctypes.c_void_p]
    library.lockbox_import_stats.restype = buffer_type
    library.lockbox_reset_import_stats.argtypes = [ctypes.c_void_p]
    library.lockbox_reset_import_stats.restype = ctypes.c_bool
    library.lockbox_inspect_file.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_inspect_file.restype = buffer_type
    library.lockbox_page_inspection.argtypes = [ctypes.c_void_p]
    library.lockbox_page_inspection.restype = buffer_type
    library.lockbox_recovery_report.argtypes = [ctypes.c_void_p]
    library.lockbox_recovery_report.restype = buffer_type
    library.lockbox_recovery_report_render.argtypes = [ctypes.c_void_p, ctypes.c_bool, ctypes.c_size_t]
    library.lockbox_recovery_report_render.restype = buffer_type
    library.lockbox_recovery_scan_path.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_recovery_scan_path.restype = buffer_type
    library.lockbox_storage_len.argtypes = [ctypes.c_void_p]
    library.lockbox_storage_len.restype = ctypes.c_uint64
    library.lockbox_set_workload_profile.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_set_workload_profile.restype = ctypes.c_bool
    library.lockbox_set_worker_policy.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t]
    library.lockbox_set_worker_policy.restype = ctypes.c_bool
    library.lockbox_runtime_options.argtypes = [ctypes.c_void_p]
    library.lockbox_runtime_options.restype = buffer_type
    library.lockbox_commit.argtypes = [ctypes.c_void_p]
    library.lockbox_commit.restype = ctypes.c_bool
    library.lockbox_create_dir.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.lockbox_create_dir.restype = ctypes.c_bool
    library.lockbox_delete.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_delete.restype = ctypes.c_bool
    library.lockbox_remove_dir.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.lockbox_remove_dir.restype = ctypes.c_bool
    library.lockbox_create_parent_dirs.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_create_parent_dirs.restype = ctypes.c_bool
    library.lockbox_rename.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_rename.restype = ctypes.c_bool
    library.lockbox_list.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.lockbox_list.restype = buffer_type
    library.lockbox_list_with_options.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool, ctypes.c_bool, ctypes.c_bool, ctypes.c_bool, ctypes.c_size_t]
    library.lockbox_list_with_options.restype = buffer_type
    library.lockbox_stat.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_stat.restype = buffer_type
    library.lockbox_set_variable.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_set_variable.restype = ctypes.c_bool
    library.lockbox_set_secret_variable.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_set_secret_variable.restype = ctypes.c_bool
    library.lockbox_get_variable.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_get_variable.restype = buffer_type
    library.lockbox_get_secret_variable.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.POINTER(ctypes.c_void_p)]
    library.lockbox_get_secret_variable.restype = ctypes.c_bool
    library.lockbox_delete_variable.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_delete_variable.restype = ctypes.c_bool
    library.lockbox_move_variables.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_move_variables.restype = ctypes.c_bool
    library.lockbox_list_variables.argtypes = [ctypes.c_void_p]
    library.lockbox_list_variables.restype = buffer_type
    library.lockbox_variable_sensitivity.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_variable_sensitivity.restype = buffer_type
    library.lockbox_add_symlink.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_bool]
    library.lockbox_add_symlink.restype = ctypes.c_bool
    library.lockbox_get_symlink_target.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_get_symlink_target.restype = buffer_type
    library.lockbox_id.argtypes = [ctypes.c_void_p]
    library.lockbox_id.restype = buffer_type
    library.lockbox_exists.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_exists.restype = ctypes.c_bool
    library.lockbox_is_dir.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_is_dir.restype = ctypes.c_bool
    library.lockbox_permissions.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_permissions.restype = ctypes.c_uint32
    library.lockbox_set_permissions.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint32]
    library.lockbox_set_permissions.restype = ctypes.c_bool
    library.lockbox_read_range.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64, ctypes.c_uint64]
    library.lockbox_read_range.restype = buffer_type
    library.lockbox_recovery_scan.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_recovery_scan.restype = buffer_type
    library.lockbox_recovery_salvage.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.lockbox_recovery_salvage.restype = ctypes.c_void_p
    library.lockbox_add_password.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_add_password.restype = ctypes.c_uint64
    library.lockbox_add_contact.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_add_contact.restype = ctypes.c_uint64
    library.lockbox_delete_key.argtypes = [ctypes.c_void_p, ctypes.c_uint64]
    library.lockbox_delete_key.restype = ctypes.c_bool
    library.lockbox_list_key_slots.argtypes = [ctypes.c_void_p]
    library.lockbox_list_key_slots.restype = buffer_type
    library.lockbox_set_owner_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p]
    library.lockbox_set_owner_signing_key.restype = ctypes.c_bool
    library.lockbox_owner_inspection.argtypes = [ctypes.c_void_p]
    library.lockbox_owner_inspection.restype = buffer_type
    library.lockbox_define_form.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_define_form.restype = buffer_type
    library.lockbox_list_form_definitions.argtypes = [ctypes.c_void_p]
    library.lockbox_list_form_definitions.restype = buffer_type
    library.lockbox_resolve_form.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_resolve_form.restype = buffer_type
    library.lockbox_list_form_revisions.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_list_form_revisions.restype = buffer_type
    library.lockbox_create_form_record.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_create_form_record.restype = buffer_type
    library.lockbox_set_form_field.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
